[package]
name = "crashcart"
version = "0.1.0"
authors = ["Vishvananda Ishaya Abrams <vish.ishaya@oracle.com>"]

[dependencies]
caps = "0.0.1"
error-chain = "0.10.0"
getopts = "0.2.14"
nix = "0.8.0"
libc = "0.2.21"
log = {version = "0.3.6", features = ["release_max_level_info"] }
scopeguard = "0.3.2"
glob = "0.2.11"

[profile.release]
lto = true
panic = 'abort'
